src/objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>X1__c</fullName>
        <description>zone 1</description>
        <label>1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2__c</fullName>
        <label>2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3__c</fullName>
        <description>zone3</description>
        <label>3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>